--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-compress": "^3.0.0",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
-    "node-fetch": "^2.1.2",
-    "node-xlsx": "^0.11.2",
-    "request": "^2.87.0"
+    "node-xlsx": "^0.11.2"
   }
 }
