--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-compress": "^3.0.0",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
-    "node-xlsx": "^0.11.2"
+    "node-xlsx": "^0.11.2",
+    "request": "^2.88.0"
   }
 }
